# sample

./: CMakeLists.txt  Folder.h  FunctorCalc.cpp  FunctorCalc.h  InputFunctor.cpp  InputFunctor.h  Message.cpp  Message.h  OOP_Quote.cpp  OOP_Quote.h  RegisterEntries.cpp  RegisterEntries.h  RevenueData.cpp  RevenueData.h  SimpleString.cpp  SimpleString.h  StringBlob.cpp  StringBlob.h  StringVector.cpp  StringVector.h  TextQueryAlloc.cpp  TextQueryAlloc.h  TextQuerySTL.cpp  TextQuerySTL.h  WordCounter.cpp  WordCounter.h  data2.txt  longdata.txt  sample.cpp  sample.h  verylongdata.txt
